# sigmaepsilon.mesh

./: .coveragerc  .coveragerc_nojit  .gitignore  .numba_config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  LICENSE  README.md  THIRD-PARTY-LICENSES  export_requirements.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.bat  run_pytest_cov.sh  run_pytest_cov_nojit.sh  run_tests_with_coverage.bat  run_tests_with_coverage.sh  run_tests_with_coverage_nojit.sh  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  development.rst  examples_gallery.rst  getting_started.ipynb  getting_started.rst  index.rst  installation.rst  intro.md  pointdata.parquet  user_guide.rst
docs/source/_static/: custom.css
docs/source/api/: api_cells.rst  api_data.rst  api_db.rst  api_downloads.rst  api_interpolator.rst  api_meshgen.rst  api_plotting.rst  api_recipes.rst  api_space.rst  api_topo.rst  api_triangulate.rst  api_typing.rst  api_utils.rst
docs/source/developer_guide/: installation.rst  testing.rst
docs/source/examples/: compound1.ipynb  compound2.ipynb  compound3.ipynb  cube.ipynb  cylinder.ipynb  disc.ipynb  grids2d.ipynb  grids3d.ipynb  import_file.ipynb  import_gmsh.ipynb  import_pyvista.ipynb  joint_cube.ipynb  lighting.ipynb  plot_surface_normals.ipynb  section.ipynb  shape_functions_1d.ipynb  shape_functions_Q9.ipynb  shape_functions_T6.ipynb  sphere.ipynb  trigridQ4.ipynb
docs/source/notebooks/: approximation.ipynb  data.ipynb  grids.ipynb  interpolation.ipynb  io.ipynb  k3d.html  mesh_analysis.ipynb  mesh_composition.ipynb  mesh_structure.ipynb  plotting.ipynb  points_and_pointclouds.ipynb  read_from_stl.ipynb  shape_function_generation.ipynb  trafo_geom.ipynb  trafo_topo.ipynb  voxelize_TET4_to_H8.ipynb  voxelize_bunny.ipynb  voxelize_stand.ipynb
src/polymesh/: abcdata.py  celldata.py  examples.py  pointdata.py  polydata.py  section.py
src/polymesh/space/: pointcloud.py
src/sigmaepsilon/mesh/: __init__.py  akwrap.py  base.py  cell.py  cellapproximator.py  celldata.py  config.py  downloads.py  examples.py  grid.py  helpers.py  indexmanager.py  line.py  linedata.py  mesh1d.py  pointdata.py  polydata.py  polygon.py  pop.py  recipes.py  section.py  tetmesh.py  tetrahedralize.py  tile.py  topoarray.py  triang.py  trimesh.py  voxelize.py  vtkcelltypes.py  warnings.py
src/sigmaepsilon/mesh/cells/: __init__.py  cell.py  celldata.py  geometry.py  h27.py  h8.py  l2.py  l3.py  meta.py  q4.py  q8.py  q9.py  t3.py  t6.py  tet10.py  tet4.py  w18.py  w6.py
src/sigmaepsilon/mesh/cells/base/: __init__.py  approximator.py  cell.py  cell1d.py  cell2d.py  cell3d.py  interpolator.py  line.py  polygon.py  polyhedron.py  protocols.py
src/sigmaepsilon/mesh/core/: __init__.py  akwrapper.py  cell.py  celldata.py  celldatabase.py  geometry.py  metacelldata.py  pointdata.py  pointdatabase.py  polydata.py  polydatabase.py
src/sigmaepsilon/mesh/data/: __init__.py  akwrapper.py  cellbase.py  celldata.py  gridmesh.py  linedata.py  pointdata.py  polycell.py  polydata.py  tetmesh.py  trimesh.py
src/sigmaepsilon/mesh/domains/: __init__.py  section.py
src/sigmaepsilon/mesh/errors/: __init__.py
src/sigmaepsilon/mesh/geometry/: geometry.py
src/sigmaepsilon/mesh/io/: __init__.py  from_meshio.py  from_pyvista.py  from_stl.py  to_k3d.py  to_pyvista.py  to_vtk.py
src/sigmaepsilon/mesh/plotting/: __init__.py  k3dplot.py  pvplot.py
src/sigmaepsilon/mesh/plotting/mpl/: __init__.py  parallel.py  triplot.py  utils.py
src/sigmaepsilon/mesh/plotting/plotly/: __init__.py  lines.py  points.py  tri.py
src/sigmaepsilon/mesh/space/: frame.py  point.py  pointcloud.py
src/sigmaepsilon/mesh/typing/: __init__.py  abcakwrapper.py  abccelldata.py  abcpolycell.py  celldata.py  data.py  geometry.py  pointdata.py  polycell.py  polydata.py
src/sigmaepsilon/mesh/utils/: cic.py  colors.py  knn.py  locate.py  logical.py  numint.py  space.py  tet.py  topodata.py  tri.py  utils.py
src/sigmaepsilon/mesh/utils/cells/: approximator.py  gauss.py  h27.py  h8.py  interpolator.py  l2.py  numint.py  q4.py  q8.py  q9.py  t3.py  t6.py  tet10.py  tet4.py  utils.py  w18.py
src/sigmaepsilon/mesh/utils/topology/: __init__.py  cic.py  topo.py  tr.py  trimap.py
tests/: _test_getattr.ipynb  conftest.py  test_cells.py  test_colors.py  test_compound.py  test_db_io.py  test_examples.py  test_frame.py  test_geom.py  test_grid.py  test_hex.py  test_index_manager.py  test_io.py  test_linalg.py  test_mesh_1d.py  test_mesh_anal.py  test_meshing.py  test_numint.py  test_point.py  test_pointcloud.py  test_pointdata.py  test_recipes.py  test_section.py  test_testbooks.py  test_tet.py  test_tetrahedralize.py  test_topo.py  test_topo_tr.py  test_tri.py  test_triangulation.py  test_utils_cic.py  test_utils_logical.py  test_voxelization.py  test_vtk_celltypes.py  utils.py
tests/cells/: test_H27.py  test_H8.py  test_Q4.py  test_Q8.py  test_Q9.py  test_approximator.py  test_cells.py  test_hex.py  test_interpolator.py  test_lines.py  test_polycell.py  test_polycell_1d.py  test_tet.py  test_tri.py
tests/files/: bike_stem.stl
tests/plotting/: test_parallel.py  test_plotly.py  test_pvplot.py  test_triplot.py
tests/polydata/: test_linedata.py  test_polydata.py  test_polydata_creation.py  test_polydata_plotting.py
tests/scenarios/: test_joint_cube.py  test_scenario_1.py  test_scenario_2.py  test_scenario_3.py
tests/testbooks/: test_cell_coords_1d.ipynb
