[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.mesh"
version = "3.1.0"
description = "A Python package to build, manipulate and analyze polygonal meshes."
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
keywords = [
    "engineering", "mathematics", "optimization", "vector", "tensor",
    "vector algebra", "tensor algebra", "symbolic mathematics", 
    "nonlinear optimization"
]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.mesh"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.mesh"
documentation = "https://sigmaepsilonmath.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
toml = "^0.10.2"
sigmaepsilon-deepdict = "^2.0.0"
sigmaepsilon-math = "^2.1.0"
fsspec = "^2023.1.0"
sectionproperties = ">2.1.3"
meshio = "^5.3.5"
numpy = ">=1.22.2"

# dependencies due to vulnerabilities
pillow = ">=10.3.0"

[tool.poetry.group.dev.dependencies]
networkx = ">=3.0"
matplotlib = "^3.8.3"
vtk = "^9.3.0"
pyvista = "^0.43.3"
sectionproperties = "^3.1.2"
pythreejs = "^2.4.2"
ipyvtklink = "^0.2.3"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
plotly = "^5.19.0"
autopep8 = "^2.0.4"
awkward = "^2.6.1"
pyarrow = "^15.0.0"
asciitree = "^0.3.3"
numpy = ">=1.22.2"
pillow = ">=10.0.1"
tornado = ">=6.3.3"
fonttools = ">=4.43.0"
ipython = ">=8.10.0"
setuptools = ">=65.5.1"
poetry-plugin-export = "^1.6.0"
black = "^24.8.0"

[tool.poetry.group.test.dependencies]
pyvista = "^0.43.3"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
k3d = "^2.16.1"
networkx = ">=3.0"
pillow = ">=10.2.0"
fonttools = ">=4.43.0"
testbook = "^0.4.2"
plotly = "^5.24.1"

[tool.poetry.group.docs.dependencies]
ipython = "^8.21.0"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
sphinx-gallery = "^0.15.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-bibtex = "^2.6.2"
nbsphinx-link = "^1.3.0"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
sphinx-design = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.15.2"
sphinx-plotly-directive = "^0.1.3"
pyvista = "^0.43.3"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
k3d = "^2.16.1"
setuptools = ">=65.5.1"
numpy = ">=1.22.2"
pillow = ">=10.0.1"
tornado = ">=6.3.3"
fonttools = ">=4.43.0"
